[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/PlayerSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/airstrip-four/airstrip_28.tres" type="DynamicFont" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
np_start_game_button = NodePath("CenterContainer/VBoxContainer/NewGameButton")
np_start_game_skip_button = NodePath("CenterContainer/VBoxContainer/NewGameSkipTutoButton")
np_player_selector_1 = NodePath("CenterContainer/VBoxContainer/PlayerSelector/PlayerSelector1")
np_player_selector_2 = NodePath("CenterContainer/VBoxContainer/PlayerSelector/PlayerSelector2")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 744.0
margin_top = 404.0
margin_right = 1176.0
margin_bottom = 676.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 432.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "Hack N Smash"
align = 1

[node name="PlayerSelector" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 432.0
margin_bottom = 188.0

[node name="PlayerSelector1" parent="CenterContainer/VBoxContainer/PlayerSelector" instance=ExtResource( 2 )]
listening = true
player_id = 1

[node name="PlayerSelector2" parent="CenterContainer/VBoxContainer/PlayerSelector" instance=ExtResource( 2 )]
margin_left = 218.0
margin_right = 432.0
player_id = 2

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 432.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "start game (with tutorial)"

[node name="NewGameSkipTutoButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 432.0
margin_bottom = 272.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "start game (skip tutorial)"

[connection signal="joined" from="CenterContainer/VBoxContainer/PlayerSelector/PlayerSelector1" to="." method="_on_PlayerSelector1_joined"]
[connection signal="joined" from="CenterContainer/VBoxContainer/PlayerSelector/PlayerSelector2" to="." method="_on_PlayerSelector2_joined"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameSkipTutoButton" to="." method="_on_NewGameSkipTutoButton_pressed"]
